--- a/Healthtechbd/Dashboard.xaml
+++ b/Healthtechbd/Dashboard.xaml
@@ -19,7 +19,7 @@
 
             <StackPanel>
 
-                <TextBlock Text="Search Patient" Width="170"  Margin="0 0 0 10" FontSize="25" Foreground="#252834" FontWeight="Bold"/>
+                <TextBlock Text="Search Patient" Width="170"  Margin="0 0 0 10" FontSize="25" Foreground="#252834" FontWeight="Normal"/>
 
                 <Grid>
                     <TextBox Text="Phone number" x:Name="patientPhone" Width="300" Style="{StaticResource InputField}" GotFocus="patientPhone_GotFocus" LostFocus="patientPhone_LostFocus"/>
