--- a/Healthtechbd/Patients.xaml
+++ b/Healthtechbd/Patients.xaml
@@ -8,7 +8,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
       Title="Patients">
-    
+      
     <StackPanel>
         <!--Page Heading-->
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
@@ -18,6 +18,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="PATIENTS" Style="{StaticResource PageHeading}"/>
             <Button ToolTip="Add Patient" x:Name="ButtonAddPatient" Grid.Column="1" Margin="0 0 20 0" Content="ADD PATIENT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPatient_Click" />
+            <Button ToolTip="Synchronize Patient" x:Name="ButtonSyncPatient" Grid.Column="1" Margin="0 0 140 0" Content="SYNC PATIENT" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonSyncPatient_Click" />
         </Grid>
 
         <!--Page Heading Bottom-->
