--- a/Healthtechbd/prescriptionTemplates/DefaultTemplate.xaml
+++ b/Healthtechbd/prescriptionTemplates/DefaultTemplate.xaml
@@ -17,7 +17,7 @@
                 
         <Style TargetType="TextBlock" x:Key="blockHaead">
             <Setter Property="Foreground" Value="#fff"/>
-            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontSize" Value="14"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="Padding" Value="0 2 0 6"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -70,7 +70,7 @@
                             </Grid.RowDefinitions>
 
                             <!--Doctors Info-->
-                            <Border Padding="10" Grid.Row="0">
+                            <Border Grid.Row="0">
                                 <Grid>
 
                                     <Grid.ColumnDefinitions>
@@ -85,8 +85,8 @@
                                     <Border Grid.Column="1" Padding="10" Style="{StaticResource ResourceKey=singleBorder}" >
                                         <StackPanel HorizontalAlignment="Center">
                                             <TextBlock x:Name="DoctorName" Style="{StaticResource Level}" FontSize="30" Foreground="#000" Text="Arafath Khan"/>
-                                            <TextBlock TextWrapping="WrapWithOverflow" Foreground="#000" x:Name="DoctorQualification" Style="{StaticResource Level}" Text="MBBS; FCPS( Medicine)"/>
-                                            <TextBlock TextWrapping="WrapWithOverflow" Foreground="#000" x:Name="DoctorSpecialist" Style="{StaticResource Level}" Text="Neurologist"/>
+                                            <TextBlock Foreground="#000" x:Name="DoctorQualification" Style="{StaticResource Level}" Text="MBBS; FCPS( Medicine)"/>
+                                            <TextBlock Foreground="#000" x:Name="DoctorSpecialist" Style="{StaticResource Level}" Text="Neurologist"/>
                                             <TextBlock x:Name="DoctorClinicName" Style="{StaticResource Level}" Foreground="#000" Text="Clinic Name"/>
 
                                             <StackPanel x:Name="DoctorChamberArea" Orientation="Horizontal">
@@ -100,7 +100,7 @@
                                 </Grid>
                             </Border>
 
-                            <Border Padding="10" Grid.Row="1">
+                            <Border Padding="0 10 0 0" Grid.Row="1">
                                 <Grid>
 
                                     <Grid.ColumnDefinitions>
@@ -223,7 +223,7 @@
                                 </Grid>
                             </Border>
 
-                            <Border Padding="10" Grid.Row="2">
+                            <Border Padding="0 10 0 0" Grid.Row="2">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition></ColumnDefinition>
@@ -266,7 +266,7 @@
                             </Border>
 
                             <!--Doctors Note-->
-                            <Border Grid.Row="5"  Padding="10">
+                            <Border Grid.Row="5"  Padding="0 10 0 0">
                                 <Border Style="{StaticResource ResourceKey=singleBorder}" >
                                     <StackPanel>
                                         <Border CornerRadius="10" Background="#0000EF" BorderBrush="#0000EF" BorderThickness="1">
@@ -283,9 +283,9 @@
                             </Border>
 
 
-                            <Border Margin="10 0" Grid.Column="2" Height="2" Grid.Row="6" Background="#0000FE"/>
+                            <Border Margin="0 10 0 0" Grid.Column="2" Height="2" Grid.Row="6" Background="#0000FE"/>
 
-                            <Border Padding="12 12 12 0" Grid.Row="7">
+                            <Border Grid.Row="7">
                                 <Grid>
 
                                     <Grid.ColumnDefinitions>
