--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -18,7 +18,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="PRESCRIPTIONS" Style="{StaticResource PageHeading}"/>
-            <Button ToolTip="Add Prescription" x:Name="ButtonAddPrescription" Grid.Column="1" Margin="0 0 20 0" Content="ADD PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPrescription_Click" />
+            <Button  Grid.Column="1" Margin="0 0 20 0" Content="ADD PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPrescription_Click" />
         </Grid>
 
         <!--Page Heading Bottom-->
@@ -38,7 +38,7 @@
                         <Button ToolTip="Search" x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button ToolTip="Reset"  x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
+                        <Button x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
@@ -50,19 +50,9 @@
                                     <DataGridTextColumn Width="*" Header="Patient" Binding="{Binding user.first_name}" />
                                     <DataGridTextColumn Width="*" Header="Phone" Binding="{Binding user.phone}" />
                                     <DataGridTextColumn Width="*" Header="Created" Binding="{Binding created}" />
-                                    <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
+                                <DataGridTextColumn Width="*" Visibility="Hidden" Binding="{Binding id}" />
 
-                                    <DataGridTemplateColumn Header="Action">
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
-                                            <Button ToolTip="View" x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
-                                                    <materialDesign:PackIcon Kind="Eye"/>
-                                                </Button>
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>
-
-                                    <!--<DataGridTemplateColumn>
+                                <!--<DataGridTemplateColumn>
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                             <Button ToolTip="Edit" x:Name="btnEditPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnEditPrescriptionRow_Click"  >
@@ -72,17 +62,27 @@
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>-->
 
-                                    <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn Header="Action"> 
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                            <Button ToolTip="Delete" x:Name="btnDeletePrescriptionRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeletePrescriptionRow_Click" >
-                                                    <materialDesign:PackIcon Kind="Delete"/>
+                                                <Button ToolTip="View" x:Name="btnViewPrescriptionRow" Background="#3CC2BB" Height="20" Width="30" Padding="0" Click="btnViewPrescriptionRow_Click"  >
+                                                    <materialDesign:PackIcon Kind="Eye"/>
                                                 </Button>
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
 
-                                </DataGrid.Columns>
+                                <DataGridTemplateColumn>
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button ToolTip="Delete" x:Name="btnDeletePrescriptionRow" Background="#3CC2BB" Height="20" Width="30"  Padding="0" Click="btnDeletePrescriptionRow_Click" >
+                                                <materialDesign:PackIcon Kind="Delete"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
+
+                            </DataGrid.Columns>
                             </DataGrid>
                         </Grid>
                     </Border>
