--- a/Healthtechbd/AddDiagnosisTemplate.xaml
+++ b/Healthtechbd/AddDiagnosisTemplate.xaml
@@ -94,8 +94,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button ToolTip="Cancel" x:Name="CancelAddDiagnosisTemplate" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddDiagnosisTemplate_Click"/>
-                <Button ToolTip="Submit" x:Name="SubmitAddDiagnosisTemplate" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddDiagnosisTemplate_Click" />
+                <Button  x:Name="CancelAddDiagnosisTemplate" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddDiagnosisTemplate_Click"/>
+                <Button  x:Name="SubmitAddDiagnosisTemplate" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddDiagnosisTemplate_Click" />
             </StackPanel>
 
         </Grid>
