--- a/Healthtechbd/AddMedicines.xaml
+++ b/Healthtechbd/AddMedicines.xaml
@@ -59,8 +59,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20">
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button ToolTip="Cancel" x:Name="CancelAddMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddMedicine_Click" />
-                <Button ToolTip="Submit" x:Name="SubmitAddMedicine" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddMedicine_Click" />
+                <Button  x:Name="CancelAddMedicine" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelAddMedicine_Click" />
+                <Button  x:Name="SubmitAddMedicine" Content="SUBMIT" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitAddMedicine_Click" />
             </StackPanel>
 
         </Grid>
