--- a/Healthtechbd/DiagnosisTemplates.xaml
+++ b/Healthtechbd/DiagnosisTemplates.xaml
@@ -18,7 +18,7 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="DIAGNOSIS TEMPLATES" VerticalAlignment="Center" Margin="20" Foreground="#252834" FontSize="18"/>
-                <Button ToolTip="Add Diagnosis Template" x:Name="ButtonAddDiagnosisTemplate" Grid.Column="1" Margin="0 0 20 0" Content="ADD DIAGNOSIS TEMPLATE" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddDiagnosisTemplate_Click" />
+                <Button x:Name="ButtonAddDiagnosisTemplate" Grid.Column="1" Margin="0 0 20 0" Content="ADD DIAGNOSIS TEMPLATE" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddDiagnosisTemplate_Click" />
             </Grid>
         </Grid>
 
@@ -40,7 +40,7 @@
                         <Button ToolTip="Search" x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button ToolTip="Reset" x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
+                        <Button  x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
