--- a/Healthtechbd/EditDiagnosis.xaml
+++ b/Healthtechbd/EditDiagnosis.xaml
@@ -51,8 +51,8 @@
         <Grid Height="60" Background="#E3E7EB" Margin="20" >
 
             <StackPanel Orientation="Horizontal" Margin="20 0 0 0">
-                <Button ToolTip="Cancel" x:Name="CancelEditDiagnosis" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditDiagnosis_Click" />
-                <Button ToolTip="Update" x:Name="SubmitUpdateDiagnosis" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateDiagnosis_Click"  />
+                <Button x:Name="CancelEditDiagnosis" Content="CANCEL" HorizontalAlignment="Left" Margin="0 0 20 0" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="CancelEditDiagnosis_Click" />
+                <Button x:Name="SubmitUpdateDiagnosis" Content="UPDATE" HorizontalAlignment="Left" BorderThickness="0" FontWeight="SemiBold" FontSize="12" Height="35"  Background="#3CC2BB" Click="SubmitUpdateDiagnosis_Click"  />
             </StackPanel>
 
         </Grid>
