--- a/Healthtechbd/Medicines.xaml
+++ b/Healthtechbd/Medicines.xaml
@@ -17,7 +17,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="MEDICINES" VerticalAlignment="Center" Margin="20" Foreground="#252834" FontSize="18"/>
-            <Button ToolTip="Add Medicine" x:Name="ButtonAddMedicine" Grid.Column="1" Margin="0 0 20 0" Content="ADD MEDICINE" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddMedicine_Click" />
+            <Button x:Name="ButtonAddMedicine" Grid.Column="1" Margin="0 0 20 0" Content="ADD MEDICINE" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddMedicine_Click" />
         </Grid>
 
         <!--Page Heading Bottom-->
@@ -37,7 +37,7 @@
                         <Button ToolTip="Search" x:Name="btnSearch" Style="{StaticResource SearchButton}" Grid.Column="1" Margin="0 0 10 0" Click="btnSearch_Click">
                             <materialDesign:PackIcon Kind="DatabaseSearch"/>
                         </Button>
-                        <Button ToolTip="Reset" x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
+                        <Button x:Name="btnReset" Grid.Column="2" Style="{StaticResource SearchButton}" Click="btnReset_Click">Reset</Button>
                     </Grid>
                 </Grid>
 
