--- a/Healthtechbd/Prescriptions.xaml
+++ b/Healthtechbd/Prescriptions.xaml
@@ -15,10 +15,11 @@
         <Grid Height="60" Background="#fff" VerticalAlignment="top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Text="PRESCRIPTIONS" Style="{StaticResource PageHeading}"/>
-            <Button  Grid.Column="1" Margin="0 0 20 0" Content="ADD PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPrescription_Click" />
+            <Button Grid.Column="1" Margin="0 0 20 0" Content="ADD PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="ButtonAddPrescription_Click" />
+            <Button Grid.Column="1" Margin="0 0 180   0" Content="SYNC PRESCRIPTION" BorderThickness="0" FontWeight="Normal" FontSize="12" Height="35"  Background="#3CC2BB"  VerticalAlignment="Center" HorizontalAlignment="Right" Click="Button_Click" />
         </Grid>
 
         <!--Page Heading Bottom-->
